k8s/deploy-benchmark.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: toolbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: toolbox
        release: "2"
    spec:
      volumes:
      - name: bash-script
        configMap:
          name: bash-script
      containers:
      - name: toolbox
        image: ubuntu:latest
        volumeMounts:
          - mountPath: /workload
            name: bash-script
        command:
          - /bin/bash
          - /workload/script.sh
