k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dumb-server
    process: api
    product: default
  name: dumb-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dumb-server
      process: api
      product: default
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
       app: dumb-server
       process: api
       product: default
    spec:
      containers:
      - image: spagiari/dumb-server:latest
        imagePullPolicy: Always
        name: dumb-server
