k8s/toolbox.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: toolbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: toolbox
        release: "2"
    spec:
      containers:
      - name: toolbox
        image: ubuntu:latest
        command:
          - /bin/sleep
          - "9999"
