k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumb-server
  namespace: default
  labels:
    app: dumb-server
    product: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: dumb-server
    product: default
    process: api
  type: ClusterIP
